objects/CaseReleaseJunction__c.object
<CustomObject>
    <description>This is a junction object that allows for a many-to-many relationship between the Case and Release objects.</description>
    <fields>
        <fullName>Actual_Hours_Summary__c</fullName>
        <description>This field pulls in the Actual Hours value from the related case record.</description>
        <formula>Related_Cases__r.Actual_Time_Hrs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Hours Summary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Cases__c</fullName>
        <description>This field creates a relationship between cases and the casereleasejunctions record.</description>
        <label>Related Cases</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Release</relationshipLabel>
        <relationshipName>CaseReleaseJunction</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <description>This relationship field sets the relationship between the release record and the casereleasejunction record.</description>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Included Cases</relationshipLabel>
        <relationshipName>CaseReleaseJunction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Release Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>